Update Take a 5-min action.htm

--- a/Habits/Take 5 mins action/Take a 5-min action.htm
+++ b/Habits/Take 5 mins action/Take a 5-min action.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel='stylesheet' type='text/css' href='Resource\css\pestyle.css'>
+<link rel='stylesheet' type='text/css' href='Resource/css/pestyle.css'>
 </head>
 <body lang=EN-IN link=blue vlink=purple>
 <div > 
