Revert "Update Take a 5-min action.htm"
This reverts commit 21094ee456b9df009c779aa835f99a1760bf81fe.

--- a/Habits/Take 5 mins action/Take a 5-min action.htm
+++ b/Habits/Take 5 mins action/Take a 5-min action.htm
@@ -1,12 +1,12 @@
 <html>
 <head>
-<link rel='stylesheet' type='text/css' href='https://prashanth-rao.github.io/pecoach.io/Resource/css/pestyle.css'>
+<link rel='stylesheet' type='text/css' href='Resource/css/pestyle.css'>
 </head>
 <body lang=EN-IN link=blue vlink=purple>
 <div > 
 <h2 >Practice taking a 5-min action every day.</h2> 
 <form > 
-<h1 >https://prashanth-rao.github.io/pecoach.io/
+<h1 >
 <section id="ember97" >Practice taking a 5-min action every day.</h1> 
 <p>In coaching as in life, you're the expert of your experience.</p> 
 <p>Better than anyone else, you know your body. You know your lifestyle, abilities, wants and needs. You know your goals.</p> 
@@ -24,13 +24,13 @@
 <p>Use this as an experiment to build your Owner’s Manual.</p> 
 </section>
 <section id="ember101" > 
-<div class='figure'><img src='https://prashanth-rao.github.io/pecoach.io/Resource/img/bd4d8805-2695-43f0-8fec-c6cf2ded2bb0.png' width=100%></div>
+<div class='figure'><img src='Resource\img\bd4d8805-2695-43f0-8fec-c6cf2ded2bb0.png' width=100%></div>
 <h1 >Ideas for action</h1> 
 <p>Here are some ideas to get started:</p> 
 <li> Book a time or place to get your workout done. </li>
 <li> Take 5-min to book an appointment you've been putting off. </li>
-<li> Take the stairs rather than the elevator in your daily routihttps://prashanth-rao.github.io/pecoach.io/ne. </li/
-<l/> Park 5-min farther away from the door to your office building. </li>
+<li> Take the stairs rather than the elevator in your daily routine. </li>
+<li> Park 5-min farther away from the door to your office building. </li>
 <li> Practice a new cooking skill. </li>
 <li> Start a gratitude journal. </li>
 <li> Take a multivitamin. </li>
