Update Take a 5-min action.htm

--- a/Habits/Take 5 mins action/Take a 5-min action.htm
+++ b/Habits/Take 5 mins action/Take a 5-min action.htm
@@ -1,32 +1,32 @@
 <html>
 <head>
-<link rel='stylesheet' type='text/css' href='Resource/css/pestyle.css'>
+<link rel='stylesheet' type='text/css' href='https://prashanth-rao.github.io/pecoach.io/Resource/css/pestyle.css'>
 </head>
 <body lang=EN-IN link=blue vlink=purple>
-<div > 
-<h2 >Practice taking a 5-min action every day.</h2> 
-<form > 
+<div >
+<h2 >Practice taking a 5-min action every day.</h2>
+<form >
 <h1 >
-<section id="ember97" >Practice taking a 5-min action every day.</h1> 
-<p>In coaching as in life, you're the expert of your experience.</p> 
-<p>Better than anyone else, you know your body. You know your lifestyle, abilities, wants and needs. You know your goals.</p> 
-<p>Based on what you already know about yourself, tap in to your own expertise.</p> 
-<p><strong >How is your daily practice going?</strong></p> 
-<p>Below is a reminder of what to do.</p> 
+<section id="ember97" >Practice taking a 5-min action every day.</h1>
+<p>In coaching as in life, you're the expert of your experience.</p>
+<p>Better than anyone else, you know your body. You know your lifestyle, abilities, wants and needs. You know your goals.</p>
+<p>Based on what you already know about yourself, tap in to your own expertise.</p>
+<p><strong >How is your daily practice going?</strong></p>
+<p>Below is a reminder of what to do.</p>
 </section>
-<section id="ember99" > 
-<p><strong >Starting today,</strong></p> 
-<p>1. <strong >Pick </strong><em ><b>one</b></em><strong> improvement you want to make.</strong><br > There are endless changes to be made to move you towards your goals. Try choosing just one.</p> 
-<p>2. <strong >Break that one improvement down into a very, very, very small and simple chunk.</strong> A chunk you can do in 5–10 minutes, today. If it's helpful, you can use the 4-circle diagram below to break-down your larger goal into a practical 5-minute action. The &quot;Today&quot; circle holds the 5-min action.</p> 
-<p>3. <strong >Commit to practicing one 5-minute action every day.</strong> That can be the same 5-minute action that builds, or it can be something different every day. You decide what works best for your life and your goals. Collaborate with your coach to set a plan that's right for you. Then, assess the progress. Take what you've learned to adjust course and find the fastest, easiest track towards your goals.</p> 
-<p><strong >As always (most importantly): learn about yourself.</strong></p> 
+<section id="ember99" >
+<p><strong >Starting today,</strong></p>
+<p>1. <strong >Pick </strong><em ><b>one</b></em><strong> improvement you want to make.</strong><br > There are endless changes to be made to move you towards your goals. Try choosing just one.</p>
+<p>2. <strong >Break that one improvement down into a very, very, very small and simple chunk.</strong> A chunk you can do in 5–10 minutes, today. If it's helpful, you can use the 4-circle diagram below to break-down your larger goal into a practical 5-minute action. The &quot;Today&quot; circle holds the 5-min action.</p>
+<p>3. <strong >Commit to practicing one 5-minute action every day.</strong> That can be the same 5-minute action that builds, or it can be something different every day. You decide what works best for your life and your goals. Collaborate with your coach to set a plan that's right for you. Then, assess the progress. Take what you've learned to adjust course and find the fastest, easiest track towards your goals.</p>
+<p><strong >As always (most importantly): learn about yourself.</strong></p>
 <li> <strong >What do you like and what do you need?</strong><br > Keep paying attention to how you think, feel and act. What patterns do you notice when you make these changes? </li>
-<p>Use this as an experiment to build your Owner’s Manual.</p> 
+<p>Use this as an experiment to build your Owner’s Manual.</p>
 </section>
-<section id="ember101" > 
-<div class='figure'><img src='Resource\img\bd4d8805-2695-43f0-8fec-c6cf2ded2bb0.png' width=100%></div>
-<h1 >Ideas for action</h1> 
-<p>Here are some ideas to get started:</p> 
+<section id="ember101" >
+<div class='figure'><img src='https://prashanth-rao.github.io/pecoach.io/Resource\img\bd4d8805-2695-43f0-8fec-c6cf2ded2bb0.png' width=100%></div>
+<h1 >Ideas for action</h1>
+<p>Here are some ideas to get started:</p>
 <li> Book a time or place to get your workout done. </li>
 <li> Take 5-min to book an appointment you've been putting off. </li>
 <li> Take the stairs rather than the elevator in your daily routine. </li>
@@ -37,25 +37,25 @@
 <li> If you’re recovering from an injury or illness, practice your rehab exercises. </li>
 <li> Add 5 minutes of mobility and stretching to the beginning or end of your workout. </li>
 <li> If you’re typically indoors, find fresh air and sunlight in the middle of the day. </li>
-<p>Ask yourself:</p> 
-<p><strong >What’s </strong><em ><b>one small</b></em><strong> action I can take today that would make me feel just a little more awesome?</strong></p> 
+<p>Ask yourself:</p>
+<p><strong >What’s </strong><em ><b>one small</b></em><strong> action I can take today that would make me feel just a little more awesome?</strong></p>
 </section>
-<section id="ember105" > 
-<h1 >Start small, experiment, and collaborate</h1> 
-<p>Make it easy. Choose &quot;low-hanging fruit&quot;. Small, simple, practical, and almost guaranteed to succeed.</p> 
-<p>Don't start a big project or get over-ambitious. Don't over-think it.</p> 
-<p><strong >Aim for 100% confident that you can do each day's task.</strong></p> 
-<p>The goal of this practice is:</p> 
-<p>1. Visualize a larger goal</p> 
-<p>2. Break that goal down into related simple, practical actions that move you forward</p> 
-<p>3. Take action every day towards the future you want for yourself</p> 
-<p>One small step at a time.</p> 
-<p>What can you learn about yourself and what you want? What’s uncomfortable? What trade-offs are you willing to make, and not make?</p> 
-<p>Experiment. Keep it simple, fun, creative and practical.</p> 
-<p><strong >Collaborate with your coach to find the plan that’s best for you.</strong></p> 
-</section> 
-</form> 
-<p> </p> 
-</div> 
-</body> 
-</html> 
+<section id="ember105" >
+<h1 >Start small, experiment, and collaborate</h1>
+<p>Make it easy. Choose &quot;low-hanging fruit&quot;. Small, simple, practical, and almost guaranteed to succeed.</p>
+<p>Don't start a big project or get over-ambitious. Don't over-think it.</p>
+<p><strong >Aim for 100% confident that you can do each day's task.</strong></p>
+<p>The goal of this practice is:</p>
+<p>1. Visualize a larger goal</p>
+<p>2. Break that goal down into related simple, practical actions that move you forward</p>
+<p>3. Take action every day towards the future you want for yourself</p>
+<p>One small step at a time.</p>
+<p>What can you learn about yourself and what you want? What’s uncomfortable? What trade-offs are you willing to make, and not make?</p>
+<p>Experiment. Keep it simple, fun, creative and practical.</p>
+<p><strong >Collaborate with your coach to find the plan that’s best for you.</strong></p>
+</section>
+</form>
+<p> </p>
+</div>
+</body>
+</html>
